# fastSearch

./: .gitignore  CMakeLists.txt  README.md
bench/: BM_lower_bound_compare.cpp  CMakeLists.txt
cmake/: hybrid_searchConfig.cmake.in
include/Boundcraft/: boundcraft.hpp  searcher.hpp  traits.hpp
include/Boundcraft/details/: lower-bound-gallop-impl.hpp  util.hpp
include/boundcraft/: boundcraft.hpp  policy.hpp  searcher.hpp
include/boundcraft/details/: lower-bound-gallop-impl.hpp  lower-bound-hybrid-impl.hpp  lower-bound-standard-impl.hpp  util.hpp
include/boundcraft/details/lower-bound/: lower-bound-gallop-impl.hpp  lower-bound-hybrid-impl.hpp  lower-bound-standard-impl.hpp  lower-bound-util.hpp  lower-bound.hpp
include/boundcraft/details/upper-bound/: upper-bound-gallop-impl.hpp  upper-bound-hybrid-impl.hpp  upper-bound-standard-impl.hpp  upper-bound-util.hpp  upper-bound.hpp
include/hybridSearch/: lower-bound.hpp  policy.hpp  searcher.hpp  traits.hpp
include/hybridSearch/details/: lower-bound-gallop-impl.hpp  lower-bound-hybrid-impl.hpp  lower-bound-impl.hpp  lower-bound-standard-impl.hpp
tests/: CMakeLists.txt  lower-bound-tests.cpp  test.cpp  upper-bound-tests.cpp
